# postfun

./: .dockerignore  .env.example  .gitignore  Dockerfile.web  Dockerfile.worker  README.md  docker-compose.yml  postfun.db  pyproject.toml  requirements.txt  setup_btc_token.py  test_withdrawal.py  wsgi.py
app/: __init__.py  config.py  extensions.py  models.py  worker.py
app/admin/: __init__.py
app/api/: __init__.py
app/auth/: __init__.py
app/services/: __init__.py  alerts.py  amm.py  audit.py  lightning.py  market_data.py  metrics.py  nostr_dm.py  reconcile.py  wallet.py
app/static/: nostr_login_demo.html
app/templates/: 401.html  403.html  404.html  429.html  500.html  about.html  alerts.html  base.html  creator.html  creator_hub.html  dashboard.html  download.html  explore.html  faq.html  home.html  launchpad.html  pool.html  portfolio.html  pro.html  profile.html  reward.html  stats.html  token_detail.html  tokens.html  tournament.html  twitter_profile.html  user.html  wallet.html  watchlist.html
app/utils/: __init__.py  jwt_utils.py  nostr.py
app/web/: __init__.py  utils.py
docs/: ABC.md
docs/asd/: 1.md  2.md  3.md  5.md
docs/old/: PRD.md  README.md
frontend/: package-lock.json  package.json  postfun.db  tailwind.config.js
frontend/src/: input.css
migrations/versions/: 0f1e2d3c4b5a_admin_ops_flags_and_feature_flags.py  164f3c9c8e79_add_sats_column_to_users.py  1a2b3c4d5e7f_add_ohlc_and_categories.py  1a2b3c4d5e80_add_twitter_tables.py  1a2b3c4d5e81_add_user_twitter_connection.py  2a3b4c5d6e7f_add_tweet_fields_to_tokeninfo.py  (+8 more)
(+31 files in other folders)
